* add implementation of gradle tasks * add task 2 for day 2 * fix listing files from jar * fix running days from jar