@@ -2,8 +2,8 @@ package pl.alergeek;
 
 import pl.alergeek.model.Day;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Set;
-import java.util.logging.Logger;
 
 import static picocli.CommandLine.Command;
 import static picocli.CommandLine.Option;
@@ -14,19 +14,11 @@ import static pl.alergeek.ListCommand.findImplementedDays;
         description = "Run tasks from day od advent code."
 )
 public class RunCommand implements Runnable {
-    private final Logger logger = Logger.getLogger("RunCommand.class");
     @Option(names = {"-d", "--day"},
             description = "Specify day of challenge",
             defaultValue = "1"
     )
     String day;
-
-    @Option(names = {"-h", "--help"},
-            description = "Show this help",
-            help = true,
-            usageHelp = true
-    )
-    boolean help;
 
     @Override
     public void run() {
@@ -34,16 +26,17 @@ public class RunCommand implements Runnable {
         Class<? extends Day> dayClass = classes.stream()
                 .filter(aClass -> aClass.getSimpleName().equalsIgnoreCase(day))
                 .findFirst()
-                .orElseThrow();
+                .orElseThrow(RuntimeException::new);
 
         try {
-            Day dayObj = dayClass.newInstance();
+            Day dayObj = dayClass.getConstructor().newInstance();
             String task1 = dayObj.task1();
             String task2 = dayObj.task2();
 
             System.out.println("Result of task 1:\t" + task1);
             System.out.println("Result of task 2:\t" + task2);
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InvocationTargetException | InstantiationException | IllegalAccessException |
+                 NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
     }
